# postgres-auto-backup

./: .gitignore  LICENSE  README.md  install.py  install.sh  pyproject.toml  run.py  run.sh
