[tool.poetry]
name = "postgresautobackup"
version = "0.1.0"
description = "Automatic Postgres databases backup to Discord"
authors = ["Exenifix"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
exencolorlogs = "^1.1.1"
requests = "^2.28.2"
exencolor = "^1.1.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
black = "^23.1.0"
ruff = "^0.0.245"
isort = "^5.12.0"

[tool.ruff]
line-length = 120

[tool.black]
line_length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
